tests/k8s_testcases/example_policies/testcase5/testcase5-networkpolicy1.yaml

## First file - contains a single policy that enables access within kube-system from all pods with app not in file-plugin, keepalived-watcher

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-app-notin-predefined
  namespace: kube-system 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - podSelector: 
          matchExpressions:
            - key: app
              operator: NotIn
              values:
                - file-plugin
                - keepalived-watcher
            - key: app
              operator: Exists
